--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,5 +17,5 @@ spring:
           useUnicode: true
           characterEncoding: utf-8
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     defer-datasource-initialization: true
