--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
     database-platform: org.hibernate.dialect.MySQL57Dialect
     properties:
       hibernate:
+        format_sql: true # jpa 쿼리문 확인용
+        show_sql: true # jpa 쿼리문 확인용
         jdbc:
           lob:
             non_contextual_creation: true
@@ -17,5 +19,14 @@ spring:
           useUnicode: true
           characterEncoding: utf-8
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     defer-datasource-initialization: true
+# create : 기존 테이블 삭제 후 재생성
+# create-drop : create와 동일하지만, 실행 끝나면 테이블 drop시킴
+# update : 기존 테이블에 칼럼 추가 반영. 칼럼 속성은 건들지 않음
+# validate : 테이블을 생성하거나 수정하지 않고, 엔티티 클래스와 테이블이 정상적으로 매핑되는지만 검사
+# none : 위의 4가지 경우를 제외한 모든 경우
+
+# 개발 초기 단계 / 로컬에서 테스트 : create 또는 update
+# 테스트 서버 : update 또는 validate
+# 운영 서버 : validate 또는 none
