--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // 템플릿 타임리프 추가
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 
     // JUnit 추가
     testImplementation 'org.junit.jupiter:junit-jupiter'
