--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     // spring security 관련 타임리프 라이브러리 (security 쓰기위한 타임리프 확장기능)
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+    // 마크다운 라이브러리 추가
+    implementation 'org.commonmark:commonmark:0.21.0'
+
 }
 
 tasks.named('test') {
