--- a/build.gradle
+++ b/build.gradle
@@ -55,3 +55,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+bootJar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
