--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,14 @@
 spring:
   datasource:
-    url: jdbc:mysql://13.124.227.116/:3306/wiki?useSSL=false&autoReconnect=true
+    url: jdbc:mysql://43.200.41.117:3306/wiki?useSSL=false&autoReconnect=true&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false&useUnicode=true&characterEncoding=utf-8&createDatabaseIfNotExist=true
+    #url: jdbc:mysql://127.0.0.1:3306/wiki?useSSL=false&autoReconnect=true
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 1234
+    username: kwang
+    #username: root
+    password: 4545bnbn!
 
   jpa:
-    database-platform: org.hibernate.dialect.MySQL57Dialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     properties:
       hibernate:
         format_sql: true # jpa 쿼리문 확인용
