--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
-    url: jdbc:mysql://43.200.41.117:3306/wiki?useSSL=false&autoReconnect=true&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false&useUnicode=true&characterEncoding=utf-8&createDatabaseIfNotExist=true
-    #url: jdbc:mysql://127.0.0.1:3306/wiki?useSSL=false&autoReconnect=true
+#    url: jdbc:mysql://43.200.41.117:3306/wiki?useSSL=false&autoReconnect=true&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false&useUnicode=true&characterEncoding=utf-8&createDatabaseIfNotExist=true
+    url: jdbc:mysql://127.0.0.1:3306/wiki?useSSL=false&autoReconnect=true
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: kwang
-    #username: root
+    #username: kwang
+    username: root
     password: 4545bnbn!
 
   jpa:
